--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "debug": "^3.1.0",
     "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.15",
-    "react-swipe": "^5.1.0"
+    "react-scripts": "1.0.15"
   },
   "scripts": {
     "start": "react-scripts start",
